MFB: Fixed bug #47549 (get_defined_constants() return array with broken array categories)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@276743 c90b9560-bf6c-de11-be94-00142212c4b1